--- a/VGA/VGA.qsf
+++ b/VGA/VGA.qsf
@@ -39,9 +39,56 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSXFC6D6F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY VGA
+set_global_assignment -name TOP_LEVEL_ENTITY main
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:21:25  SEPTEMBER 28, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name BOARD "Cyclone V SoC Development Kit"
+set_global_assignment -name SYSTEMVERILOG_FILE clock25mh.sv
+set_global_assignment -name SYSTEMVERILOG_FILE comparador_igual.sv
+set_global_assignment -name SYSTEMVERILOG_FILE comparador_mayor.sv
+set_global_assignment -name SYSTEMVERILOG_FILE contador_direccion.sv
+set_global_assignment -name SYSTEMVERILOG_FILE contador_horizontal.sv
+set_global_assignment -name SYSTEMVERILOG_FILE contador_parametrizable.sv
+set_global_assignment -name SYSTEMVERILOG_FILE contador_vertical.sv
+set_global_assignment -name SYSTEMVERILOG_FILE controlador_vga.sv
+set_global_assignment -name SYSTEMVERILOG_FILE mostrarImagen.sv
+set_global_assignment -name SYSTEMVERILOG_FILE sincronizador.sv
+set_global_assignment -name SYSTEMVERILOG_FILE rom.sv
+set_global_assignment -name SYSTEMVERILOG_FILE main.sv
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_AK16 -to blue_out[7]
+set_location_assignment PIN_AJ16 -to blue_out[6]
+set_location_assignment PIN_AJ17 -to blue_out[5]
+set_location_assignment PIN_AH19 -to blue_out[4]
+set_location_assignment PIN_AJ19 -to blue_out[3]
+set_location_assignment PIN_AH20 -to blue_out[2]
+set_location_assignment PIN_AJ20 -to blue_out[1]
+set_location_assignment PIN_AJ21 -to blue_out[0]
+set_location_assignment PIN_AF14 -to clock_50
+set_location_assignment PIN_AH23 -to green_out[7]
+set_location_assignment PIN_AK23 -to green_out[6]
+set_location_assignment PIN_AH24 -to green_out[5]
+set_location_assignment PIN_AJ24 -to green_out[4]
+set_location_assignment PIN_AK24 -to green_out[3]
+set_location_assignment PIN_AH25 -to green_out[2]
+set_location_assignment PIN_AJ25 -to green_out[1]
+set_location_assignment PIN_AK26 -to green_out[0]
+set_location_assignment PIN_AK19 -to hsync
+set_location_assignment PIN_AJ22 -to n_blank
+set_location_assignment PIN_AJ26 -to red_out[7]
+set_location_assignment PIN_AG26 -to red_out[6]
+set_location_assignment PIN_AF26 -to red_out[5]
+set_location_assignment PIN_AH27 -to red_out[4]
+set_location_assignment PIN_AJ27 -to red_out[3]
+set_location_assignment PIN_AK27 -to red_out[2]
+set_location_assignment PIN_AK28 -to red_out[1]
+set_location_assignment PIN_AK29 -to red_out[0]
+set_location_assignment PIN_AB30 -to reset
+set_location_assignment PIN_Y27 -to start
+set_location_assignment PIN_AK21 -to vgaclock
+set_location_assignment PIN_AK18 -to vsync
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
