--- a/VGA/VGA.qsf
+++ b/VGA/VGA.qsf
@@ -57,9 +57,6 @@ set_global_assignment -name SYSTEMVERILOG_FILE mostrarImagen.sv
 set_global_assignment -name SYSTEMVERILOG_FILE sincronizador.sv
 set_global_assignment -name SYSTEMVERILOG_FILE rom.sv
 set_global_assignment -name SYSTEMVERILOG_FILE main.sv
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_location_assignment PIN_AK16 -to blue_out[7]
 set_location_assignment PIN_AJ16 -to blue_out[6]
 set_location_assignment PIN_AJ17 -to blue_out[5]
@@ -91,4 +88,21 @@ set_location_assignment PIN_AB30 -to reset
 set_location_assignment PIN_Y27 -to start
 set_location_assignment PIN_AK21 -to vgaclock
 set_location_assignment PIN_AK18 -to vsync
+set_global_assignment -name SYSTEMVERILOG_FILE main_tb.sv
+set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
+set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
+set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH main_tb -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME main_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id main_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME main_tb -section_id main_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE main_tb.sv -section_id main_tb
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
