--- a/VGA/VGA.qsf
+++ b/VGA/VGA.qsf
@@ -105,4 +105,8 @@ set_global_assignment -name EDA_TEST_BENCH_FILE main_tb.sv -section_id main_tb
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE rom_red.sv
+set_global_assignment -name SYSTEMVERILOG_FILE rom_green.sv
+set_global_assignment -name SYSTEMVERILOG_FILE rom_blue.sv
+set_global_assignment -name SYSTEMVERILOG_FILE concatenar_24.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
