--- a/VGA/VGA.qsf
+++ b/VGA/VGA.qsf
@@ -55,7 +55,6 @@ set_global_assignment -name SYSTEMVERILOG_FILE contador_vertical.sv
 set_global_assignment -name SYSTEMVERILOG_FILE controlador_vga.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mostrarImagen.sv
 set_global_assignment -name SYSTEMVERILOG_FILE sincronizador.sv
-set_global_assignment -name SYSTEMVERILOG_FILE rom.sv
 set_global_assignment -name SYSTEMVERILOG_FILE main.sv
 set_location_assignment PIN_AK16 -to blue_out[7]
 set_location_assignment PIN_AJ16 -to blue_out[6]
@@ -105,16 +104,9 @@ set_global_assignment -name EDA_TEST_BENCH_FILE main_tb.sv -section_id main_tb
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name SYSTEMVERILOG_FILE rom_red.sv
-set_global_assignment -name SYSTEMVERILOG_FILE rom_green.sv
-set_global_assignment -name SYSTEMVERILOG_FILE rom_blue.sv
-set_global_assignment -name SYSTEMVERILOG_FILE concatenar_24.sv
-set_global_assignment -name MIF_FILE valores_rojo.mif
-set_global_assignment -name MIF_FILE valores_verde.mif
-set_global_assignment -name MIF_FILE valores_azul.mif
-set_global_assignment -name QIP_FILE ram_rojo.qip
-set_global_assignment -name QIP_FILE ram_verde.qip
-set_global_assignment -name QIP_FILE ram_azul.qip
 set_global_assignment -name SYSTEMVERILOG_FILE contador_cursor.sv
 set_location_assignment PIN_AJ4 -to boton_cursor
+set_global_assignment -name SYSTEMVERILOG_FILE contador_cuadrado.sv
+set_global_assignment -name MIF_FILE imagen.mif
+set_global_assignment -name QIP_FILE imagen_original.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
