--- a/pipeline.qsf
+++ b/pipeline.qsf
@@ -55,7 +55,6 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name SYSTEMVERILOG_FILE Fetch_Cycle.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Mux.sv
 set_global_assignment -name SYSTEMVERILOG_FILE PC_Adder.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Instruction_Memory.sv
 set_global_assignment -name SYSTEMVERILOG_FILE PC_Module.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ALU.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ALU_Decoder.sv
@@ -71,18 +70,24 @@ set_global_assignment -name SYSTEMVERILOG_FILE Register_File.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Sign_Extend.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Writeback_Cycle.sv
 set_global_assignment -name SYSTEMVERILOG_FILE pipeline_tb.sv
-set_global_assignment -name HEX_FILE memfile.hex
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH pipeline_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH fetch_cycle_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME pipeline_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id pipeline_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME pipeline_tb -section_id pipeline_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE pipeline_tb.sv -section_id pipeline_tb
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE Fetch_Cycle_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_FILE pipeline_tb.sv -section_id pipeline_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME fetch_cycle_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id fetch_cycle_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME fetch_cycle_tb -section_id fetch_cycle_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Fetch_Cycle_tb.sv -section_id fetch_cycle_tb
+set_global_assignment -name HEX_FILE memfile.hex
+set_global_assignment -name QIP_FILE Instruction_Memory.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
