--- a/pipeline.qsf
+++ b/pipeline.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY Pipeline_Top
+set_global_assignment -name TOP_LEVEL_ENTITY ALU_tb
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:42:21  OCTOBER 05, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
@@ -75,19 +75,23 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH fetch_cycle_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH ALU_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME pipeline_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id pipeline_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME pipeline_tb -section_id pipeline_tb
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name SYSTEMVERILOG_FILE Fetch_Cycle_tb.sv
-set_global_assignment -name EDA_TEST_BENCH_FILE pipeline_tb.sv -section_id pipeline_tb
 set_global_assignment -name EDA_TEST_BENCH_NAME fetch_cycle_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id fetch_cycle_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME fetch_cycle_tb -section_id fetch_cycle_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Fetch_Cycle_tb.sv -section_id fetch_cycle_tb
-set_global_assignment -name HEX_FILE memfile.hex
 set_global_assignment -name QIP_FILE Instruction_Memory.qip
+set_global_assignment -name SYSTEMVERILOG_FILE ALU_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_FILE pipeline_tb.sv -section_id pipeline_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Fetch_Cycle_tb.sv -section_id fetch_cycle_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME ALU_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ALU_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ALU_tb -section_id ALU_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE ALU_tb.sv -section_id ALU_tb
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
