--- a/pipeline.qsf
+++ b/pipeline.qsf
@@ -19,7 +19,7 @@
 #
 # Quartus Prime
 # Version 20.1.0 Build 711 06/05/2020 SJ Lite Edition
-# Date created = 21:42:21  October 05, 2024
+# Date created = 04:05:02  October 17, 2024
 #
 # -------------------------------------------------------------------------- #
 #
@@ -39,59 +39,34 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY Fetch_Cycle_tb
+set_global_assignment -name TOP_LEVEL_ENTITY fetch_cycle
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.0
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:42:21  OCTOBER 05, 2024"
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "04:05:02  OCTOBER 17, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name BOARD "DE1-SoC Board"
-set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (SystemVerilog)"
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
-set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "SYSTEMVERILOG HDL" -section_id eda_simulation
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
-set_global_assignment -name SYSTEMVERILOG_FILE Fetch_Cycle.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Mux.sv
-set_global_assignment -name SYSTEMVERILOG_FILE PC_Module.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ALU.sv
-set_global_assignment -name SYSTEMVERILOG_FILE ALU_Decoder.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Control_Unit_Top.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Data_Memory.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Decode_Cycle.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Execute_Cycle.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Hazard_unit.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Main_Decoder.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Memory_Cycle.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Pipeline_Top.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Register_File.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Sign_Extend.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Writeback_Cycle.sv
-set_global_assignment -name SYSTEMVERILOG_FILE pipeline_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE fetch_cycle.sv
+set_global_assignment -name HEX_FILE memfile.hex
+set_global_assignment -name QIP_FILE instruction_memory.qip
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE fetch_cycle_tb.sv
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH Fetch_Cycle_tb -section_id eda_simulation
-set_global_assignment -name EDA_TEST_BENCH_NAME pipeline_tb -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id pipeline_tb
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME pipeline_tb -section_id pipeline_tb
-set_global_assignment -name SYSTEMVERILOG_FILE Fetch_Cycle_tb.sv
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH fetch_cycle_tb -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_NAME fetch_cycle_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id fetch_cycle_tb
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Fetch_Cycle_tb -section_id Fetch_Cycle_tb
-set_global_assignment -name QIP_FILE Instruction_Memory.qip
-set_global_assignment -name SYSTEMVERILOG_FILE ALU_tb.sv
-set_global_assignment -name EDA_TEST_BENCH_NAME ALU_tb -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ALU_tb
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ALU_tb -section_id ALU_tb
-set_global_assignment -name EDA_TEST_BENCH_NAME Fetch_Cycle_tb -section_id eda_simulation
-set_global_assignment -name EDA_TEST_BENCH_FILE pipeline_tb.sv -section_id pipeline_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE ALU_tb.sv -section_id ALU_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Fetch_Cycle_tb.sv -section_id Fetch_Cycle_tb
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name SYSTEMVERILOG_FILE PC_Adder.sv
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME fetch_cycle_tb -section_id fetch_cycle_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE fetch_cycle_tb.sv -section_id fetch_cycle_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
