--- a/pipeline.qsf
+++ b/pipeline.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY Control_Unit_Top_20_tb
+set_global_assignment -name TOP_LEVEL_ENTITY decode_cycle20_tb
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:42:21  OCTOBER 05, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
@@ -57,7 +57,7 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH " Control_Unit_Top_20_tb" -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH decode_cycle20_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME pipeline_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id pipeline_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME pipeline_tb -section_id pipeline_tb
@@ -67,6 +67,15 @@ set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME fetch_cycle_tb -section_i
 set_global_assignment -name EDA_TEST_BENCH_NAME ALU_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ALU_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ALU_tb -section_id ALU_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME Main_Decoder_20_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id Main_Decoder_20_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Main_Decoder_20_tb -section_id Main_Decoder_20_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME ALU_Decoder_20_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ALU_Decoder_20_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ALU_Decoder_20_tb -section_id ALU_Decoder_20_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME " Control_Unit_Top_20_tb" -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id " Control_Unit_Top_20_tb"
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME " Control_Unit_Top_20_tb" -section_id " Control_Unit_Top_20_tb"
 set_global_assignment -name SYSTEMVERILOG_FILE Main_Decoder_20_tb.sv
 set_global_assignment -name VERILOG_FILE Instruction_Memory_syn.v
 set_global_assignment -name VERILOG_FILE Instruction_Memory_bb.v
@@ -99,23 +108,28 @@ set_global_assignment -name SYSTEMVERILOG_FILE decode_cycle_20.sv
 set_global_assignment -name SYSTEMVERILOG_FILE decode_cycle20_tb.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Control_Unit_Top_20.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ALU_Decoder_20.sv
-set_global_assignment -name EDA_TEST_BENCH_NAME Main_Decoder_20_tb -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id Main_Decoder_20_tb
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Main_Decoder_20_tb -section_id Main_Decoder_20_tb
 set_global_assignment -name SYSTEMVERILOG_FILE ALU_Decoder_20_tb.sv
-set_global_assignment -name EDA_TEST_BENCH_NAME ALU_Decoder_20_tb -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id ALU_Decoder_20_tb
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME ALU_Decoder_20_tb -section_id ALU_Decoder_20_tb
 set_global_assignment -name SYSTEMVERILOG_FILE Control_Unit_Top_20_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE Register_File_20_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME Register_File_20_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id Register_File_20_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Register_File_20_tb -section_id Register_File_20_tb
+set_global_assignment -name SYSTEMVERILOG_FILE Sign_Extend_20_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME Sign_Extend_20_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id Sign_Extend_20_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Sign_Extend_20_tb -section_id Sign_Extend_20_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE pipeline_tb.sv -section_id pipeline_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Fetch_Cycle_tb.sv -section_id fetch_cycle_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE ALU_tb.sv -section_id ALU_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Main_Decoder_20_tb.sv -section_id Main_Decoder_20_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE ALU_Decoder_20_tb.sv -section_id ALU_Decoder_20_tb
-set_global_assignment -name EDA_TEST_BENCH_NAME " Control_Unit_Top_20_tb" -section_id eda_simulation
-set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id " Control_Unit_Top_20_tb"
-set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME " Control_Unit_Top_20_tb" -section_id " Control_Unit_Top_20_tb"
 set_global_assignment -name EDA_TEST_BENCH_FILE Control_Unit_Top_20_tb.sv -section_id " Control_Unit_Top_20_tb"
+set_global_assignment -name EDA_TEST_BENCH_FILE Register_File_20_tb.sv -section_id Register_File_20_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE Sign_Extend_20_tb.sv -section_id Sign_Extend_20_tb
+set_global_assignment -name EDA_TEST_BENCH_NAME decode_cycle20_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id decode_cycle20_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME decode_cycle20_tb -section_id decode_cycle20_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE decode_cycle20_tb.sv -section_id decode_cycle20_tb
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
