--- a/pipeline.qsf
+++ b/pipeline.qsf
@@ -69,4 +69,5 @@ set_global_assignment -name EDA_TEST_BENCH_NAME fetch_cycle_tb -section_id eda_s
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id fetch_cycle_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME fetch_cycle_tb -section_id fetch_cycle_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE fetch_cycle_tb.sv -section_id fetch_cycle_tb
+set_global_assignment -name SYSTEMVERILOG_FILE memory_cycle.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
