--- a/VGA/VGA.qsf
+++ b/VGA/VGA.qsf
@@ -109,4 +109,5 @@ set_location_assignment PIN_AJ4 -to boton_cursor
 set_global_assignment -name SYSTEMVERILOG_FILE contador_cuadrado.sv
 set_global_assignment -name MIF_FILE imagen.mif
 set_global_assignment -name QIP_FILE imagen_original.qip
+set_global_assignment -name MIF_FILE imagen_original.mif
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
