--- a/Procesador/pipeline.qsf
+++ b/Procesador/pipeline.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY execute_cycle_tb
+set_global_assignment -name TOP_LEVEL_ENTITY decode_cycle20_tb
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "21:42:21  OCTOBER 05, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
@@ -57,7 +57,7 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH execute_cycle_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH decode_cycle20_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME pipeline_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id pipeline_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME pipeline_tb -section_id pipeline_tb
@@ -88,9 +88,6 @@ set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME decode_cycle20_tb -sectio
 set_global_assignment -name SYSTEMVERILOG_FILE Register_File_20.sv
 set_global_assignment -name SYSTEMVERILOG_FILE PC_Adder.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Main_Decoder_20_tb.sv
-set_global_assignment -name VERILOG_FILE Instruction_Memory_syn.v
-set_global_assignment -name VERILOG_FILE Instruction_Memory_bb.v
-set_global_assignment -name SYSTEMVERILOG_FILE Fetch_Cycle.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Mux.sv
 set_global_assignment -name SYSTEMVERILOG_FILE PC_Module.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ALU.sv
@@ -107,10 +104,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE Register_File.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Sign_Extend.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Writeback_Cycle.sv
 set_global_assignment -name SYSTEMVERILOG_FILE pipeline_tb.sv
-set_global_assignment -name SYSTEMVERILOG_FILE Fetch_Cycle_tb.sv
-set_global_assignment -name QIP_FILE Instruction_Memory.qip
 set_global_assignment -name SYSTEMVERILOG_FILE ALU_tb.sv
-set_global_assignment -name SOURCE_FILE db/pipeline.cmp.rdb
 set_global_assignment -name SYSTEMVERILOG_FILE decode_cycle20_tb.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ALU_Decoder_20_tb.sv
 set_global_assignment -name SYSTEMVERILOG_FILE Control_Unit_Top_20_tb.sv
@@ -124,11 +118,34 @@ set_global_assignment -name SYSTEMVERILOG_FILE Mux_tb.sv
 set_global_assignment -name EDA_TEST_BENCH_NAME Mux_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id Mux_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME Mux_tb -section_id Mux_tb
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/clock25mh.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/comparador_igual.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/comparador_mayor.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/contador_cuadrado.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/contador_cursor.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/contador_direccion.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/contador_horizontal.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/contador_parametrizable.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/contador_vertical.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/controlador_vga.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/main.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/main_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/mostrarImagen.sv
+set_global_assignment -name SYSTEMVERILOG_FILE ../VGA/sincronizador.sv
+set_global_assignment -name SYSTEMVERILOG_FILE main_top.sv
+set_global_assignment -name QIP_FILE ../VGA/Ram.qip
+set_global_assignment -name QIP_FILE ../VGA/imagen_original.qip
+set_global_assignment -name MIF_FILE ../VGA/imagen_original.mif
+set_global_assignment -name MIF_FILE ../VGA/Ram.mif
+set_global_assignment -name QIP_FILE instruction_memory.qip
+set_global_assignment -name SYSTEMVERILOG_FILE fetch_cycle_tb.sv
+set_global_assignment -name SYSTEMVERILOG_FILE fetch_cycle.sv
+set_global_assignment -name HEX_FILE memfile.hex
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_FILE pipeline_tb.sv -section_id pipeline_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE Fetch_Cycle_tb.sv -section_id fetch_cycle_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE fetch_cycle_tb.sv -section_id fetch_cycle_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE ALU_tb.sv -section_id ALU_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE Main_Decoder_20_tb.sv -section_id Main_Decoder_20_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE ALU_Decoder_20_tb.sv -section_id ALU_Decoder_20_tb
