--- a/VGA/VGA.qsf
+++ b/VGA/VGA.qsf
@@ -111,3 +111,5 @@ set_global_assignment -name MIF_FILE imagen.mif
 set_global_assignment -name QIP_FILE imagen_original.qip
 set_global_assignment -name MIF_FILE imagen_original.mif
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name MIF_FILE Ram.mif
+set_global_assignment -name QIP_FILE Ram.qip
