--- a/Procesador/pipeline.qsf
+++ b/Procesador/pipeline.qsf
@@ -142,6 +142,7 @@ set_global_assignment -name SYSTEMVERILOG_FILE fetch_cycle_tb.sv
 set_global_assignment -name SYSTEMVERILOG_FILE fetch_cycle.sv
 set_global_assignment -name HEX_FILE memfile.hex
 set_global_assignment -name MIF_FILE imem.mif
+set_global_assignment -name SYSTEMVERILOG_FILE Imem.sv
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
